b=528042; add missing toDataURL support for webgl canvases; r=bjacob